programming-language/workspace/compiler/tests/snapshots/snapshots_test__error_missing_main.snap
---
source: tests/snapshots_test.rs
expression: error
---
error[E220]: Missing main() function
  --> missing_main.cb64:1:1
  |
1 | # Missing main function
  | ^
